--- a/praktikum/tubes/php/css/style2.css
+++ b/praktikum/tubes/php/css/style2.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #cd5c5c;
+  background-color: black;
 }
 
 .auth {
@@ -8,7 +8,7 @@ body {
 }
 
 .auth .card {
-  box-shadow: 8px 12px 18px 0 rgb(25, 42, 70, 0.7);
+  box-shadow: 8px 12px 18px 0 rgb(25, 42, 70, 0.9);
   margin-bottom: 2.2rem;
   border-radius: 2px;
   padding: 20px;
